fixed overflow on animations

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -139,10 +139,10 @@ body {
 .App {
     background-image: url("/img/static/images/landing-page-background-1.webp");
     background-size:100% auto; 
-    background-repeat:repeat-y;
+    background-repeat:repeat;
     background-position: top;
     overflow-x: hidden;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     width: 100%;
     margin: 0;
     padding: 0;
